assets/css/style.css
/* ... */
/* ----------------------styles--and----colors------------------------------- */

.font--Yellowtail {
  font-family: 'Yellowtail', cursive;
}

.font--Special_Elite {
  font-family: 'Special Elite', cursive;
}

.text--upper {
  text-transform: uppercase;  
}

.text-center {
  text-align: center;
}

.border--gray {
   border: 1px solid #565661;
}

.dorp-down-shadow {
  box-shadow: 0 0 4px 4px rgba(255, 255, 255, 0.06);
}

.primary--color {
  color: #d3d3d3;
}

.primary--color--b {
 color: #CCCCCC;
}


.secondary--color--b {
  color: #c0c0c0;  
}

.secondary--color {
  color: #B8B8B8;  
}

.Orange {
  color: #A96260;
}

.gray {
  color: #565661;
}

.green {
  color: #6d7a52;
}

.gray--background {
  background-color: #565661;
}

.dark--text {
  color: #292C26;
}

.color--1 {
   background-color: #303036;
}
 
.color--2 {
  background-color:   #A96260;
}

/*---------------------------------------------------------------------NavBar*/

.navbar--custom {
  width: inherit;
  height: 63px;
  line-height: 36px;
  display: flex;
  position: fixed; 
  z-index: 9;
}

.dropdown--menu {
  background-color: rgb(48, 48, 54, .4);
  width: 120px;
  border: 1px solid #565661;
}

.dropdown--menu a {
 width: 100px;
 text-align: right;
 float: right;
 font-size: 1em;
 letter-spacing: 1.5px;
 margin: 6px 9px;
}

.brand--style {
  display: flex;
}

.brand--style--position {
  width: 230px;
  padding: 15px 0 0 12px;
}

.brand--style a { 
  display: block;
  width: fit-content;
  text-decoration: none;
  color: #ccc;
  padding:0 12px 1px 6px;
  font-size: 36px;  
  border-bottom: 1px solid #ad7472;
}

.brand--style a:hover {
  opacity: .8;
}
 
.padding--0 {
  padding: 0;
}

.nav--social--block {
  line-height: 30px;
  text-align: right;
  float: right;
  width: 209px;
  border-bottom: 1px solid #ad7472;
  margin: 12px;
}


.btn--social {
  font-size: 33px;
  margin: 0 9px;
}

.nav--link--block {
  width: 400px;
  margin: auto;
  display: block;
}

.about {
    display: inline-block; 
}
.nav--link--block a {
 text-align: center;
 display: inline-block; 
 width: 96px;
 letter-spacing: 1.5px;
 border: 1px solid #ad7472;
 border-radius: 12px;
}


.btn--style a {
  color: #CCCCCC; 
  text-decoration: none;
}


.btn--hover:hover {
  opacity: .6; 
}

.btn--hamburger {
  margin: 9px 6px;
  width: 45px;
  color:  #CCCCCC;
  border: none;
  background-color: #A96260; 
  float: right; 
}

.btn--hamburger i {
  font-size: 2em;
  margin-top: 6px;
  padding-bottom: 3px;
  border-bottom: 1px solid #ad7472;
  
}

.hanburger--position {
  width: 100%;
}

/*----------------------------------------------------------Home*/


.home--container {
  width: 100%;
  position: relative;
}


.overlay { 
  width: 100%;
  height: 100%;  
  position: absolute;
  left: 0px;
  top: 0px;
  z-index: 2;  
  background-image: linear-gradient(rgb(169, 98, 96) 66px,   rgb(169, 98, 96, .3) 50%, rgb(48, 48, 54, .3) 70%, rgb(48, 48, 54, .5) 90%, rgb(48, 48, 54) 99%);   
}

.main--pic {
  width: 100%;
  height: 99%;  
  position: absolute;  
  z-index: 1;  
  background: url('../images/pexels-visually-us-1477166.jpg') center center / cover;
  filter: blur(3px);  
}
 
.home--content {
  position: inherit; 
  z-index: 3; 
  max-width: 1280px;
  height: auto;
  margin: auto;
  padding: 63px 12px 0px 12px;
}

.main--heading {
  width: 100%;
  margin: auto;
  padding: 12% 0 12% 0;
}

.main--heading h3 {
  font-size: min(max(1.7em, 8vw), 6em);
  padding: 6% 0;
}

.main--heading h1 {
  font-size: min(max(3.5em, 17vw), 14em);
}

.creative--solutions {
  width: fit-content;
  letter-spacing: 2px;
  padding: 0 6px 6px 6px;
  border-bottom: 1px solid #ad7472;
  font-size: min(max(.6em, 2.3vw), 2em);
} 

/*----------------------------------------------------------About*/
.about--content--mobile {
  display: none;
}

.about--container {
    width: 100%;   
}

.About--content-container {
  position: relative;
  max-width: 1280px;
  height: 936px;
  margin: auto;
}

.about--headding h1 {
    margin: auto;
    width: fit-content;
    padding: 0px 6px;
    color: #B8B8B8;
    border-bottom: 1px solid #565661;
}

.about--content {
  font-size: 1.2em;
}

.about--content img {
  width:100%;
  height: auto;
  border-radius: 50%;
  box-shadow: 0 0 4px 4px rgba(129, 129, 129, 0.3);
  transition: 0.3s; 
}

.about--content .img-1 img:hover,
.about--content .img-2 img:hover,
.about--content .img-3 img:hover {
   width: 106%;
}

.about--content .img-1,
.about--content .img-3 {
   opacity: .7;   
   transition: 0.2s;
}

.about--content .img-1:hover,
.about--content .img-3:hover {
    z-index: 6;
    right: 3%;
    opacity: 1;
}

.about--content .img-2 {
    transition: 0.3s;
}

.about--content .img-2:hover {
    right: 7%;
}


.about--content .img-1,
.about--content .img-2,
.about--content .img-3 {
    position: absolute; 
    padding: 12px;
    border-radius: 50%;
}

.about--content .img-1 {
    right: 0%;
    top: 6%;
    max-width: 400px;
}

.about--content .img-2 {
    right: 5%;
    top: 26%;
    z-index: 2;
    max-width: 550px;
}

.about--content .img-3 {
    right: 0%;
    bottom: 0%;
    max-width: 400px;
    z-index: 1;
}

.about--content .welcome-h4,
.about--content .welcome,
.about--content .we-choose,
.about--content .occasion,
.about--content .let {
    position: absolute;   
    height: auto;
    padding: 0 6px;
    z-index: 7;
}

.about--content--mobile p,
.about--content p {
    border-bottom: 1px solid #565661;
    padding: 9px 6px;
    color: #CCCCCC;
}

.about--content h2 {
    border-bottom: 1px solid #565661;
    padding: 3px 6px;
}

.about--content .welcome-h4 {
    top: 15%;
   color: #B8B8B8;
}

.welcome-h4 span {
    color: #ccc;
    font-size: 1.2em;
}

.about--content .welcome {
    top: 29%;
    max-width: 55%;
}

.welcome span{
   font-size: 1.2em;
   color: #CCCCCC;
}


.about--content .we-choose {
    top: 43%;
    max-width: 50%;
}

.about--content .occasion {
    top: 60%;
    max-width: 55%;
}

.about--content .let {
   top: 80%;
}
/* ... */

